// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/carousel/demo/autoplay.md correctly 1`] = `
<div
  class="ant-carousel"
>
  <div
    class="slick-initialized slick-slider"
    dir="ltr"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
      >
        <div
          class="slick-slide slick-cloned"
          data-index="-1"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
        <div
          class="slick-slide slick-active slick-cloned slick-current"
          data-index="0"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            1
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="1"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            2
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="2"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            3
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="3"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="4"
          tabindex="-1"
        >
          <h3>
            1
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="5"
          tabindex="-1"
        >
          <h3>
            2
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="6"
          tabindex="-1"
        >
          <h3>
            3
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="7"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/basic.md correctly 1`] = `
<div
  class="ant-carousel"
>
  <div
    class="slick-initialized slick-slider"
    dir="ltr"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
      >
        <div
          class="slick-slide slick-cloned"
          data-index="-1"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
        <div
          class="slick-slide slick-active slick-cloned slick-current"
          data-index="0"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            1
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="1"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            2
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="2"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            3
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="3"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="4"
          tabindex="-1"
        >
          <h3>
            1
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="5"
          tabindex="-1"
        >
          <h3>
            2
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="6"
          tabindex="-1"
        >
          <h3>
            3
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="7"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/fade.md correctly 1`] = `
<div
  class="ant-carousel"
>
  <div
    class="slick-initialized slick-slider"
    dir="ltr"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
      >
        <div
          class="slick-slide slick-active slick-cloned slick-current"
          data-index="0"
          style="outline:none;position:relative;left:0;opacity:1;transition:opacity 500ms ease, visibility 500ms ease;-webkit-transition:opacity 500ms ease, visibility 500ms ease"
          tabindex="-1"
        >
          <h3>
            1
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="1"
          style="outline:none;position:relative;left:0;opacity:0;transition:opacity 500ms ease, visibility 500ms ease;-webkit-transition:opacity 500ms ease, visibility 500ms ease"
          tabindex="-1"
        >
          <h3>
            2
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="2"
          style="outline:none;position:relative;left:0;opacity:0;transition:opacity 500ms ease, visibility 500ms ease;-webkit-transition:opacity 500ms ease, visibility 500ms ease"
          tabindex="-1"
        >
          <h3>
            3
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="3"
          style="outline:none;position:relative;left:0;opacity:0;transition:opacity 500ms ease, visibility 500ms ease;-webkit-transition:opacity 500ms ease, visibility 500ms ease"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/vertical.md correctly 1`] = `
<div
  class="ant-carousel ant-carousel-vertical"
>
  <div
    class="slick-initialized slick-slider slick-vertical"
    dir="ltr"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
      >
        <div
          class="slick-slide slick-cloned"
          data-index="-1"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
        <div
          class="slick-slide slick-active slick-cloned slick-current"
          data-index="0"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            1
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="1"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            2
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="2"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            3
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="3"
          style="outline:none"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="4"
          tabindex="-1"
        >
          <h3>
            1
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="5"
          tabindex="-1"
        >
          <h3>
            2
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="6"
          tabindex="-1"
        >
          <h3>
            3
          </h3>
        </div>
        <div
          class="slick-slide slick-cloned"
          data-index="7"
          tabindex="-1"
        >
          <h3>
            4
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;
